--- a/src/containers/Home/components/Content.less
+++ b/src/containers/Home/components/Content.less
@@ -3,17 +3,17 @@
   display: flex;
   flex-direction: column;
   margin: 20px 0;
-  .stageRow{
+  .stageRow {
     display: flex;
     flex-direction: row;
-    .stageCol{
+    .stageCol {
       width: 12px;
       height: 12px;
       background-color: #222;
-      &.snake, &.point{
+      &.snake {
         background-color: white;
       }
-      &.point{
+      &.point {
         background-color: red;
       }
     }
